apps/barber/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: barber
  labels:
    app.kubernetes.io/part-of: barber
