apps/barber/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: barber
spec:
  ingressClassName: nginx
  rules:
    - host: barber.godny.tech
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: barber-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: barber-frontend
                port:
                  name: http
